@@ -1,3 +1,9 @@
+2005-02-06  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* w3m-antenna.el (w3m-antenna-html-skelton): Fix typo.
+	(w3m-antenna-make-contents): Replace %D to the modified time of
+	`w3m-antenna-file'.
+
 2005-02-04  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>
 
 	* shimbun/sb-arch-bluegate.el: New file.
